guides/k8s-ctl-deploy-tekton/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tekton-dashboard
  namespace: tekton-pipelines
spec:
  parentRefs:
    - name: luban-gateway
      namespace: gateway
      sectionName: luban-local
    - name: luban-gateway
      namespace: gateway
      sectionName: luban-public
  hostnames:
    - "tekton.luban.paulhome.local"
  rules:
    - backendRefs:
        - name: tekton-dashboard
          port: 9097
      matches:
        - path:
            type: PathPrefix
            value: /
